HOTFIX: tried fixing odd behaviors with androids on the serve sign-up page. Took away animations on hover when screen is on mobile size... didn't seem to help, but going to leave it for a better mobile experience anyways.

--- a/Plugins/org.secc.Themes/Themes/SECC2014/Styles/pages/easter2018/base.scss
+++ b/Plugins/org.secc.Themes/Themes/SECC2014/Styles/pages/easter2018/base.scss
@@ -922,4 +922,58 @@ width: 33.3334%;
     span.br_line{
         background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 150, from($color-3), to($color-1));
     }
+
+    .serve-easter {
+        -webkit-transition-property: none;
+        -moz-transition-property: none;
+        -o-transition-property: none;
+        transition-property: none;
+
+        a {
+            -webkit-transition-property: none;
+            -moz-transition-property: none;
+            -o-transition-property: none;
+            transition-property: none;
+            .box {
+                -webkit-transition-property: none;
+                -moz-transition-property: none;
+                -o-transition-property: none;
+                transition-property: none;
+            }
+        }
+        &:before {
+          -webkit-transition-property: none;
+          -moz-transition-property: none;
+          -o-transition-property: none;
+          transition-property: none;
+        }
+    	&:after {
+            -webkit-transition-property: none;
+            -moz-transition-property: none;
+            -o-transition-property: none;
+            transition-property: none;
+    	}
+
+    	&:hover {
+    		-webkit-transition-property: none;
+            -moz-transition-property: none;
+            -o-transition-property: none;
+            transition-property: none;
+
+            &:before {
+                opacity: 1;
+                -webkit-transition-property: none;
+                -moz-transition-property: none;
+                -o-transition-property: none;
+                transition-property: none;
+            }
+    		&:after {
+                opacity: 1;
+                -webkit-transition-property: none;
+                -moz-transition-property: none;
+                -o-transition-property: none;
+                transition-property: none;
+    		}
+    	}
+    }
 }
